redirect from root to /frontend, small overflow fix

--- a/frontend/src/pages/Room/components/Track/style.module.sass
+++ b/frontend/src/pages/Room/components/Track/style.module.sass
@@ -7,14 +7,16 @@
   &.playing
     .left, .left >div:nth-child(2), .right
       color: $spotifyGreen
-  .left > div
-    white-space: nowrap
-    overflow: hidden
-    text-overflow: ellipsis
-    &:first-child
-      font-weight: 500
-    &:nth-child(2)
-      font-size: 13px
-      color: $spotifyTextLightGrey
+  .left
+    max-width: 80%
+    > div
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
+      &:first-child
+        font-weight: 500
+      &:nth-child(2)
+        font-size: 13px
+        color: $spotifyTextLightGrey
   .right
     color: $spotifyTextLightGrey
